test/error/scan/ExpectDigitInScale.mod
MODULE ExpectDigitInScale;

CONST x = 1.0E+;

END ExpectDigitInScale.
